Changed external library path

--- a/targets/base.conf
+++ b/targets/base.conf
@@ -9,8 +9,8 @@ libraryDirectory="${basedir}/lib"
 binaryDirectory="${basedir}/bin"
 binarySuffix=""
 
-externalIncludeDirectory="${basedir}/../arcade/include"
-externalSourceDirectory="${basedir}/../arcade/source"
+externalIncludeDirectory="${basedir}/../library/include"
+externalSourceDirectory="${basedir}/../library/source"
 
 flags="-D__LINUX__"
 compiler="g++"
